Fix config list overflow and layout

--- a/web_src/css/admin.css
+++ b/web_src/css/admin.css
@@ -11,23 +11,29 @@
 .admin dl.admin-dl-horizontal {
   padding: 1em;
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .admin dl.admin-dl-horizontal dd {
-  margin-left: 275px;
+  margin-left: auto;
+  width: calc(100% - 245px);
 }
 
 @media (max-width: 767px) {
   .admin dl.admin-dl-horizontal dd {
-    margin-left: 5%;
+    width: calc(100% - 185px);
   }
+}
+
+.admin dl.admin-dl-horizontal .ui.divider {
+  width: 100%;
 }
 
 .admin dl.admin-dl-horizontal dt {
   font-weight: var(--font-weight-bold);
-  float: left;
-  width: 285px;
-  clear: left;
+  width: 220px;
+  margin-right: 5px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -35,8 +41,7 @@
 
 @media (max-width: 767px) {
   .admin dl.admin-dl-horizontal dt {
-    width: auto;
-    margin-right: 0.5em;
+    width: 160px;
   }
 }
 
